--- a/web/index.html
+++ b/web/index.html
@@ -163,6 +163,9 @@
     <script src="/app/appModule/config/routeConfig.js"></script>
     <script src="/app/appModule/interceptor/RequestInterceptor.js"></script>
     <script src="/app/assets/angular/js/controllers/HomeCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/HeaderCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/ContactCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/TeamCtrl.js"></script>
 
 </body>
 </html>
