New Team Changes

--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,8 @@
     <meta name="author" content="">
     <title>Grownix Solution</title>
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
+    <link rel="shortcut icon" href="/app/assets/angular/images/icon.ico" />
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
