--- a/web/index.html
+++ b/web/index.html
@@ -165,6 +165,7 @@
     <script src="/app/assets/angular/js/controllers/HeaderCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/ContactCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/TeamCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/ServiceCtrl.js"></script>
 
 </body>
 </html>
