--- a/web/index.html
+++ b/web/index.html
@@ -154,6 +154,7 @@
 
     <!-- Injection Module -->
     <script src="/app/appModule/app.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <!-- inject:angular:js-->
     <script src="/app/assets/angular/js/directives/CommonUtils.js"></script>
     <script src="/app/assets/angular/js/services/commonUtils/GlobalVariableService.js"></script>
@@ -166,6 +167,7 @@
     <script src="/app/assets/angular/js/controllers/ContactCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/TeamCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/ServiceCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/AboutCtrl.js"></script>
 
 </body>
 </html>
