--- a/web/index.html
+++ b/web/index.html
@@ -44,6 +44,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css" type="text/css" />
     <!-- Load Custom CSS -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 
@@ -136,6 +137,7 @@
     <script src="/app/assets/angular/libs/autocomplete.min.js"></script>
     <script src="/app/assets/angular/libs/angular-select2.js"></script>
     <script src="/app/assets/angular/libs/ui-multiselect.js"></script>
+    <script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
@@ -168,6 +170,9 @@
     <script src="/app/assets/angular/js/controllers/TeamCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/ServiceCtrl.js"></script>
     <script src="/app/assets/angular/js/controllers/AboutCtrl.js"></script>
+    <script src="/app/assets/angular/js/controllers/PortfolioCtrl.js"></script>
+
+    
 
 </body>
 </html>
